--- a/style.css
+++ b/style.css
@@ -1,10 +1,14 @@
 body{
 	background: linear-gradient(0deg, #005CB8, 50%, #001F3D);
+	background-size: contain;
+	height: 110%;
 }
 h1{
 	color: #fff;
 	font-family: arial;
 	text-align: center;
+	padding-bottom: 0;
+	margin-bottom: 20px;
 }
 main{
 	width: 70%;
@@ -31,7 +35,16 @@ main{
 }
 .tweet{
 	padding: 5px;
-	line-height: 1;
 	font-family: arial;
+	border-bottom: 1px solid #2a1506;
+}
+.time, .message{
+	padding: 0;
+	margin: 0;
+}
+.time{
+	font-size: 12px
+}
+.message{
 	font-size: 15px;
 }
