--- a/style.css
+++ b/style.css
@@ -1,7 +1,5 @@
 body{
 	background: linear-gradient(0deg, #005CB8, 50%, #001F3D);
-	background-size: contain;
-	height: 110%;
 }
 h1{
 	color: #fff;
@@ -37,14 +35,9 @@ main{
 	padding: 5px;
 	font-family: arial;
 	border-bottom: 1px solid #2a1506;
-}
-.time, .message{
-	padding: 0;
-	margin: 0;
-}
-.time{
-	font-size: 12px
-}
-.message{
 	font-size: 15px;
+	line-height: 1.3;
+}
+small{
+	font-size: 12px;
 }
